Replace repo contents with heat folder
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>